--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,11 @@ __pycache__/
 *.log
 *.hepmc
 *.root
+*.npz
+*.csv
 s-channel_ckkwl-v0/s
 s-channel_ckkwl-v1/s
 s-channel_ckkwl-v2/s
 s-channel_ckkwl-v2-X/s
 s-channel_ckkwl-v3/s
+s-channel_ckkwl-v2/s.tar.gz
